--- a/Supervised Machine Learning.ipynb
+++ b/Supervised Machine Learning.ipynb
@@ -43,22 +43,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loadTrain(name):\n",
-    "    X = loadNLPVectors('train', name)\n",
-    "    y = loadNLPVectors('train', 'labels')\n",
-    "    return [X, y]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loadTest(name):\n",
-    "    X = loadNLPVectors('test', name)\n",
-    "    y = loadNLPVectors('test', 'labels')\n",
-    "    return [X, y]"
+    "def loadData(name):\n",
+    "    X_train = loadNLPVectors('train', name)\n",
+    "    y_train = loadNLPVectors('train', 'labels')\n",
+    "    \n",
+    "    X_test = loadNLPVectors('test', name)\n",
+    "    y_test = loadNLPVectors('test', 'labels')\n",
+    "    \n",
+    "    train = [X_train, y_train]\n",
+    "    test = [X_test, y_test]\n",
+    "    \n",
+    "    return train, test"
    ]
   },
   {
@@ -172,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load NLP Data"
+    "# Load NLP Training/Testing Data"
    ]
   },
   {
@@ -181,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_uni, test_uni = loadTrain('unigram'), loadTest('unigram')"
+    "train_uni, test_uni = loadData('unigram')"
    ]
   },
   {
@@ -190,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_big, test_big = loadTrain('bigram'), loadTest('bigram')"
+    "train_big, test_big = loadData('bigram')"
    ]
   },
   {
@@ -199,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_tfidf, test_tfidf = loadTrain('tfidf'), loadTest('tfidf')"
+    "train_tfidf, test_tfidf = loadData('tfidf')"
    ]
   },
   {
@@ -208,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_word2vec, test_word2vec = loadTrain('word2vec'), loadTest('word2vec') "
+    "train_word2vec, test_word2vec = loadData('word2vec')"
    ]
   },
   {
@@ -217,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_runi, test_runi = loadTrain('runigram'), loadTest('runigram')"
+    "train_runi, test_runi = loadData('runigram')"
    ]
   },
   {
@@ -226,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_rbig, test_rbig = loadTrain('rbigram'), loadTest('rbigram')"
+    "train_rbig, test_rbig = loadData('rbigram')"
    ]
   },
   {
@@ -235,7 +230,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_rtfidf, test_rtfidf = loadTrain('rtfidf'), loadTest('rtfidf')"
+    "train_rtfidf, test_rtfidf = loadData('rtfidf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train Classifiers"
    ]
   },
   {
@@ -252,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reduced_TFIDF Classifiers"
+    "## Reduced_TFIDF Classifiers"
    ]
   },
   {
@@ -277,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reduced_Unigram Classifiers"
+    "## Reduced_Unigram Classifiers"
    ]
   },
   {
@@ -302,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reduced_Bigram Classifiers"
+    "## Reduced_Bigram Classifiers"
    ]
   },
   {
@@ -327,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word2Vec Classifiers"
+    "## Word2Vec Classifiers"
    ]
   },
   {
@@ -352,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Raw TFIDF Classifier"
+    "## Raw TFIDF Classifier"
    ]
   },
   {
@@ -377,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Raw Unigram Classifier"
+    "## Raw Unigram Classifier"
    ]
   },
   {
@@ -402,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Raw Bigram Classifier"
+    "## Raw Bigram Classifier"
    ]
   },
   {
