--- a/Unsupervised Machine Learning .ipynb
+++ b/Unsupervised Machine Learning .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,38 +14,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loadNLPVectors(filename):\n",
-    "    file = 'nlp_data/' + filename + '.npy'\n",
+    "def loadNLPVectors(folder, filename):\n",
+    "    file = folder + '/' + filename + '.npy'\n",
     "    return np.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loadLabels():\n",
-    "    return loadNLPVectors(\"labels\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "def genData(nlp):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(nlp, labels,\n",
-    "                                                        test_size = 0.2,\n",
-    "                                                        random_state = 42,\n",
-    "                                                        shuffle = True,\n",
-    "                                                        stratify = labels)\n",
+    "def loadData(name):\n",
+    "    X_train = loadNLPVectors('train', name)\n",
+    "    y_train = loadNLPVectors('train', 'labels')\n",
+    "    \n",
+    "    X_test = loadNLPVectors('test', name)\n",
+    "    y_test = loadNLPVectors('test', 'labels')\n",
     "    \n",
     "    train = [X_train, y_train]\n",
     "    test = [X_test, y_test]\n",
@@ -57,108 +46,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load NLP Data"
+    "# Load NLP Training/Testing Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unigram_array = \"feature_array_unigram\"\n",
-    "bigram_array = \"feature_array_bigram\"\n",
-    "tfidf_array = \"feature_array_tfidf\"\n",
-    "wordvec_array = \"feature_array_word2vec\"\n",
-    "unigram_reduced = \"reduced_unigram\"\n",
-    "bigram_reduced = \"reduced_bigram\"\n",
-    "tfidf_reduced = \"reduced_tfidf\""
+    "train_uni, test_uni = loadData('unigram')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unigram = loadNLPVectors(unigram_array)\n",
-    "bigram = loadNLPVectors(bigram_array)\n",
-    "tfidf = loadNLPVectors(tfidf_array)\n",
-    "word2vec = loadNLPVectors(wordvec_array)\n",
-    "reduced_unigram = loadNLPVectors(unigram_reduced)\n",
-    "reduced_bigram = loadNLPVectors(bigram_reduced)\n",
-    "reduced_tfidf = loadNLPVectors(tfidf_reduced)\n",
-    "labels = loadLabels()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Generate Training and Testing Datasets"
+    "train_big, test_big = loadData('bigram')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_uni, test_uni = genData(unigram)"
+    "train_tfidf, test_tfidf = loadData('tfidf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_big, test_big = genData(bigram)"
+    "train_word2vec, test_word2vec = loadData('word2vec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_tfidf, test_tfidf = genData(tfidf)"
+    "train_runi, test_runi = loadData('runigram')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_vec, test_vec = genData(word2vec)"
+    "train_rbig, test_rbig = loadData('rbigram')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_runi, test_runi = genData(reduced_unigram)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_rbig, test_rbig = genData(reduced_bigram)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_rtfidf, test_rtfidf = genData(reduced_tfidf)"
+    "train_rtfidf, test_rtfidf = loadData('rtfidf')"
    ]
   },
   {
@@ -170,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,38 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time: 0.6534719467163086\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_runi = kCluster(train_runi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Cluster = 0: 0.2983508245877061\n",
-      "Hate Cluster = 1:    0.856353591160221\n",
-      " \n",
-      "Neutral Cluster = 1: 0.7016491754122939\n",
-      "Hate Cluster = 0:    0.143646408839779\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluateCluster(k_runi, test_runi)"
    ]
@@ -323,38 +263,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time: 1.6098639965057373\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_rbig = kCluster(train_rbig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Cluster = 0: 0.7016491754122939\n",
-      "Hate Cluster = 1:    0.143646408839779\n",
-      " \n",
-      "Neutral Cluster = 1: 0.2983508245877061\n",
-      "Hate Cluster = 0:    0.856353591160221\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluateCluster(k_rbig, test_rbig)"
    ]
@@ -368,38 +288,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time: 1.149717092514038\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_rtfidf = kCluster(train_rtfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Cluster = 0: 0.0022488755622188904\n",
-      "Hate Cluster = 1:    0.6621941594317285\n",
-      " \n",
-      "Neutral Cluster = 1: 0.9977511244377811\n",
-      "Hate Cluster = 0:    0.3378058405682715\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluateCluster(k_rtfidf, test_rtfidf)"
    ]
@@ -413,38 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time: 0.8785572052001953\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_vec = kCluster(train_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Cluster = 0: 0.4782608695652174\n",
-      "Hate Cluster = 1:    0.5169692186266772\n",
-      " \n",
-      "Neutral Cluster = 1: 0.5217391304347826\n",
-      "Hate Cluster = 0:    0.48303078137332284\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluateCluster(k_vec, test_vec)"
    ]
@@ -458,38 +338,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time: 53.41338229179382\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_uni = kCluster(train_uni)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Cluster = 0: 0.7016491754122939\n",
-      "Hate Cluster = 1:    0.143646408839779\n",
-      " \n",
-      "Neutral Cluster = 1: 0.2983508245877061\n",
-      "Hate Cluster = 0:    0.856353591160221\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluateCluster(k_uni, test_uni)"
    ]
@@ -503,38 +363,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time: 2734.345181941986\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_big = kCluster(train_big)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Cluster = 0: 0.7016491754122939\n",
-      "Hate Cluster = 1:    0.143646408839779\n",
-      " \n",
-      "Neutral Cluster = 1: 0.2983508245877061\n",
-      "Hate Cluster = 0:    0.856353591160221\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluateCluster(k_big, test_big)"
    ]
@@ -548,38 +388,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Time: 75.32064080238342\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "k_tfidf = kCluster(train_tfidf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Cluster = 0: 0.9985007496251874\n",
-      "Hate Cluster = 1:    0.19889502762430938\n",
-      " \n",
-      "Neutral Cluster = 1: 0.0014992503748125937\n",
-      "Hate Cluster = 0:    0.8011049723756906\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluateCluster(k_tfidf, test_tfidf)"
    ]
